force-app/main/default/objects/Expenditure__c/Expenditure__c.object-meta.xml
<CustomObject>
    <label>Expenditure</label>
    <nameField>
        <displayFormat>EE- {00000000}</displayFormat>
        <label>Expenditure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenditures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>