force-app/main/default/objects/Expenditure__c/fields/Changes_next_5_years__c.field-meta.xml
<CustomField>
    <fullName>Changes_next_5_years__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Changes next 5 years?</label>
    <type>Checkbox</type>
</CustomField>