force-app/main/default/objects/Expenditure__c/fields/Other_Discretionary_expenses__c.field-meta.xml
<CustomField>
    <fullName>Other_Discretionary_expenses__c</fullName>
    <label>Other Discretionary expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>